// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding applies compact gap and medium button size on medium device 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 16,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding applies iPhoneX notification padding when on iPhoneX 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "#FFF2EB",
                "zIndex": 1000,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "marginBottom": 160,
                  "rowGap": 32,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "display": "flex",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <ActivityIndicator
                size="small"
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#121314",
                      "marginTop": 30,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Loading...
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "flex-end",
          "flex": 0.1,
          "flexDirection": "row",
          "transform": [
            {
              "translateY": 100,
            },
          ],
        }
      }
    >
      <View
        elevation={100}
        style={
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 20,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "marginHorizontal": 16,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.8}
              style={
                {
                  "backgroundColor": "#000000cc",
                  "borderRadius": 8,
                  "flex": 1,
                  "flexDirection": "row",
                  "padding": 16,
                }
              }
            >
              <View
                style={
                  {
                    "marginRight": 15,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#457a39",
                        "fontSize": 36,
                      },
                      undefined,
                      {
                        "fontFamily": "Ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  {
                    "color": "#ffffff",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontFamily": "Geist-Bold",
                        "fontSize": 14,
                        "lineHeight": 18,
                        "marginBottom": 2,
                      },
                    ]
                  }
                  testID="notification-title"
                >
                  Success
                </Text>
                <Text
                  style={
                    [
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontSize": 12,
                        "lineHeight": 18,
                      },
                    ]
                  }
                >
                  You successfully reset your wallet!
                </Text>
              </View>
              <View />
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Onboarding applies standard gap and large button size on non-medium device 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding applies standard notification padding when not on iPhoneX 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "#FFF2EB",
                "zIndex": 1000,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "marginBottom": 160,
                  "rowGap": 32,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "display": "flex",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <ActivityIndicator
                size="small"
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#121314",
                      "marginTop": 30,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Loading...
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "flex-end",
          "flex": 0.1,
          "flexDirection": "row",
          "transform": [
            {
              "translateY": 100,
            },
          ],
        }
      }
    >
      <View
        elevation={100}
        style={
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 10,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "marginHorizontal": 16,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.8}
              style={
                {
                  "backgroundColor": "#000000cc",
                  "borderRadius": 8,
                  "flex": 1,
                  "flexDirection": "row",
                  "padding": 16,
                }
              }
            >
              <View
                style={
                  {
                    "marginRight": 15,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#457a39",
                        "fontSize": 36,
                      },
                      undefined,
                      {
                        "fontFamily": "Ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  {
                    "color": "#ffffff",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontFamily": "Geist-Bold",
                        "fontSize": 14,
                        "lineHeight": 18,
                        "marginBottom": 2,
                      },
                    ]
                  }
                  testID="notification-title"
                >
                  Success
                </Text>
                <Text
                  style={
                    [
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontSize": 12,
                        "lineHeight": 18,
                      },
                    ]
                  }
                >
                  You successfully reset your wallet!
                </Text>
              </View>
              <View />
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with android 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 16,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with large device and iphoneX 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with medium device and android 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 16,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <View
              accessibilityLabel="Create a new wallet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Create a new wallet
              </Text>
            </View>
            <View
              accessibilityLabel="Import using Secret Recovery Phrase"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#ffffff",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#000000",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;
